Cambios Práctica 1 Pedro

--- a/practica1/evento.css
+++ b/practica1/evento.css
@@ -10,6 +10,13 @@
     padding-right: 10px;
 }
 
+.logosRedesSocialesEvento {
+    width: 50px;
+    height: 50px;
+    padding-top: 15px;
+    padding-right: 10px;
+}
+
 #organizadorEvento {
     padding-left: 15px;
 }
