--- a/practica1/css/principal.css
+++ b/practica1/css/principal.css
@@ -16,5 +16,11 @@ p.ciudad {
     display: grid;
     grid-template-columns: auto auto auto;
     height: inherit;
-    grid-area: img;
+}
+
+#principal {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: 20% 80%;
 }
