--- a/css/evento.css
+++ b/css/evento.css
@@ -9,6 +9,21 @@
     padding: 7px;
 }
 
+/*
+    Principal antes de darle al botón
+*/
+
+#principalAntes {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+
+/*
+    Principal después de darle al botón
+*/
+
 #principal {
     margin-top: 10px;
     margin-bottom: 10px;
