--- a/css/evento.css
+++ b/css/evento.css
@@ -74,6 +74,7 @@
     padding-right: 0.5em;
     padding-top: 0.1em;
     padding-bottom:  0.1em;
+    border-radius: 10%;
 }
 #conjuntoComentarios > :nth-child(odd)  {
     background-color: #CDCDCD;
