--- a/templates/evento_imprimir.html
+++ b/templates/evento_imprimir.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <title>Viajes</title>
-
         <link rel="stylesheet" href="css/evento_imprimir.css"/>
-
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
@@ -14,20 +12,35 @@
     	</header>
     	<section>
     		<main class="borde" id="descripcion">
-                <section id="imagenes">
-                    <img class="imagenes" id="imagen1" src="img/fotoEvento1.jpeg" alt="Foto descriptiva número 1"/>
-                    <img class="imagenes" id="imagen2" src="img/fotoEvento2.jpg" alt="Foto descriptiva número 2"/>
+                <section id="imagen-principal">
+                    <img src='{{ viaje["imagenes"][0] }}' alt="Foto principal"/>
                 </section>
-                <h2 class="contenidoDesc" id="tituloEvento">Título del evento</h2>
+                <section id="imagenes">
+                    {% for imagen in viaje["imagenes"] %}
+                    <img class="imagenes" id="imagen{{ loop.index }}" src='{{ imagen }}' alt="Foto descriptiva número {{ loop.index }}"/>
+                    {% endfor %}
+                </section>
+                <h2 class="contenidoDesc" id="tituloEvento">{{ viaje["ciudad"] }}</h2>
                 <dl class="contenidoDesc">
                   <dt class="contenidoDesc">Organizador:</dt>
                   <dd class="contenidoDesc">Cotán</dd>
                   <dt class="contenidoDesc">Fecha: </dt>
-                  <dd class="contenidoDesc">07/03/2019</dd>
+                  <dd class="contenidoDesc">{{ viaje["fecha"] }}</dd>
                 </dl>
-                <p class="contenidoDesc">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel lectus cursus, pellentesque lectus vitae, consectetur quam. Pellentesque vulputate diam eu turpis aliquam, vitae viverra risus gravida. Donec nec venenatis libero. Fusce euismod nisi id leo mattis auctor. Nam sit amet dui maximus, pulvinar dolor at, viverra velit. Nullam tincidunt efficitur enim, at consectetur ipsum consectetur condimentum. In aliquam erat sed malesuada ullamcorper. Etiam laoreet justo in arcu posuere blandit. Aenean porttitor ultrices erat, faucibus tristique velit pellentesque vel. Sed bibendum metus a mauris sodales, ut venenatis dolor sodales. Nulla vehicula nisi eleifend, interdum mi et, fermentum quam. Nulla pretium iaculis sapien, quis sollicitudin nibh mattis nec. Donec condimentum elit vulputate mi lacinia aliquet. Nullam nec tristique nunc. Sed congue odio sed turpis viverra, ut ornare nibh blandit. Etiam scelerisque in leo nec condimentum. 
+                <p class="contenidoDesc descripcion">
+                    {{ viaje["texto"] }} 
                 </p>
+                <p class="contenidoDesc descripcion">
+                    Cras interdum ultricies elit non laoreet. Donec ac semper nulla. Sed tempor eu orci ac tincidunt. Pellentesque gravida enim eu sapien accumsan, id vehicula est suscipit. Nullam tempor fermentum arcu, at tincidunt diam consectetur tempus. Donec sollicitudin, ex at faucibus ullamcorper, eros diam posuere risus, quis tincidunt tellus erat eu lorem. Praesent non tincidunt ligula, quis malesuada nunc. Maecenas sollicitudin, mi in laoreet ultricies, tellus nisl lobortis nisl, sed molestie nibh magna non augue. Vivamus eu felis purus. Integer interdum a felis et dictum. Vestibulum eget mauris mollis, dictum nunc ac, lacinia nisi. Aliquam rutrum quis nisi sed tempus. In feugiat, nulla eget pellentesque imperdiet, mauris sem condimentum felis, sit amet fringilla neque velit eu ligula. Pellentesque id consequat nunc. Nunc ornare sollicitudin porta. Pellentesque a elit ac augue egestas faucibus.
+                </p>
+                {% if viaje["videos"] %}
+                <section id="videos">
+                    <h2 class="contenidoDesc">Videos</h2>
+                    {% for video in viaje["videos"] %}
+                    <a class="videos" id="video{{ loop.index }}" href='{{ video }}'>{{ video }}</a>
+                    {% endfor %}
+                </section>
+                {% endif %}
             </main>
     	</section>
    	</body>
