--- a/templates/evento.html
+++ b/templates/evento.html
@@ -33,8 +33,8 @@
                 <button type="button" onclick="showComments()">Comentarios</button>
 
                 <article id="redesSocialesEvento">
-                    <a  href="#"><img class="logosRedesSocialesEvento" src="img/fb-logo.jpg"></a>
-                    <a  href="#"><img class="logosRedesSocialesEvento" src="img/tw-logo.jpg"></a>
+                    <a  href="#" onclick="ventanaEmergente('Facebook')"><img class="logosRedesSocialesEvento" src="img/fb-logo.jpg"></a>
+                    <a  href="#" onclick="ventanaEmergente('Twitter')"><img class="logosRedesSocialesEvento" src="img/tw-logo.jpg"></a>
                     <a  href="evento_imprimir.php"><img class="logosRedesSocialesEvento" src="img/imprimir-logo.jpg"></a>
                 </article>
             </main>
