Introducia las fechas de publicacion y modificacion en los viajes

--- a/templates/evento.html
+++ b/templates/evento.html
@@ -12,8 +12,12 @@
                 <dl class="contenidoDesc">
                   <dt class="contenidoDesc">Ciudad:</dt>
                   <dd class="contenidoDesc">{{ viaje["ciudad"] }}</dd>
-                  <dt class="contenidoDesc">Fecha: </dt>
+                  <dt class="contenidoDesc">Fecha del viaje: </dt>
                   <dd class="contenidoDesc">{{ viaje["fecha"] }}</dd>
+                  <dt class="contenidoDesc">Fecha de publicación: </dt>
+                  <dd class="contenidoDesc">{{ viaje["fechaPublicacion"] }}</dd>
+                  <dt class="contenidoDesc">Fecha de modificación: </dt>
+                  <dd class="contenidoDesc">{{ viaje["fechaModificacion"] }}</dd>
                 </dl>
                 <p class="contenidoDesc">
                    {{ viaje["texto"] }}
