Se pueden escoger todas las ciudades y se ha corregido las referencias de las navegaciones

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -5,7 +5,7 @@
 {% block main %}
             <main class="borde" id="conjuntoEventos">
             {% for event in eventos %}
-            <div><a href={{ event["href"] }}><img class="imagenes" src={{ event["imagenFuente"] }} alt="Viaje hacia {{ event["ciudad"] }}"/><p class="ciudad">{{ event.ciudad }}</p></a></div>
+            <div><a href="{{ event["href"] }}"><img class="imagenes" src={{ event["imagenFuente"] }} alt="Viaje hacia {{ event["ciudad"] }}"/><p class="ciudad">{{ event.ciudad }}</p></a></div>
             {% endfor %}
             </main>
 {% endblock %}
