--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,8 @@
             <nav>
                 <ul id="menuCabecera">
                     {% for nav in navegacionSuperior %}
-                        <li class="elementoMenu">{{ nav }}</li>
+                        <li class="elementoMenu"><a href="{{ nav["referencia"] }}">{{ nav["contenido"] }}</a></li>
                     {% endfor %}
-                    <li class="elementoMenu"><a href="principal.html">Principal</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,9 +25,8 @@
             <aside class="borde" id="navegacionLateral">
             <ul id="listaLateral">
                 {% for elemento in navegacionLateral %}
-                    <li class="elementoLateral">{{ elemento }}</li>
+                    <li class="elementoMenu"><a href="{{ elemento["referencia"] }}">{{ elemento["contenido"] }}</a></li>
                 {% endfor %}
-                <li class="elementoLateral"><a href="evento.php">Evento</a></li>
             </ul>
         </aside>
             {% block main %}{% endblock %}            
