Refactorign general y corrección de varios bugs

--- a/css/comun.css
+++ b/css/comun.css
@@ -1,3 +1,45 @@
+.flex-container {
+    display: flex;
+}
+.flex-direction-column {
+    flex-direction: column;
+}
+.flex-direction-row {
+    flex-direction: row;
+}
+.flex-wrap-wrap{
+    flex-wrap: wrap;
+}
+
+.justify-content-flex-start{
+    justify-content: flex-start;
+}
+
+.justify-content-center{
+    justify-content: center;
+}
+.justify-content-flex-end{
+    justify-content: flex-end;
+}
+.justify-content-flex-start{
+    justify-content: flex-start;
+}
+.justify-content-space-around{
+    justify-content: space-around;
+}
+.align-items-center{
+    align-items: center; 
+}
+.align-items-flex-start{
+    align-items: flex-start; 
+}
+.align-items-flex-end{
+    align-items: flex-end; 
+}
+.align-items-stretch{
+    align-items: stretch;
+}
+
 #imagenAvion {
     height: 200px;
     width: 200px;
