--- a/templates/galeria.html
+++ b/templates/galeria.html
@@ -8,9 +8,11 @@
 			<div>
 				<h2 id="ciudad">{{ v["ciudad"] }}</h2>
 				
-				<div id="galeriaFotos">
+				<div id="galeriaFotos" class="flex-container justify-content-space-around flex-wrap-wrap">
 					{% for img in v["imagenes"] %}
-							<img class="imagenes" src="{{ img }}" alt="Viaje hacia {{ v["ciudad"] }}" />
+						<div>
+							<img class="imagenes" src="{{ img }}" alt="Viaje hacia {{ v['ciudad'] }}" />
+						</div>
 					{% endfor %}
 				</div>
 			</div>
