--- a/templates/base.html
+++ b/templates/base.html
@@ -9,29 +9,26 @@
     </head>
     <body>
         <header class="borde" id="cabecera">
-            <a href="principal.html"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
+            <a href="/SIBW"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
             <h1 id="cabeceraPrincipal">Viajes</h1>
             <nav>
                 <ul id="menuCabecera">
                     {% for nav in navegacionSuperior %}
-                        <li class="elementoMenu"><a href="{{ nav["referencia"] }}">{{ nav["contenido"] }}</a></li>
+                        <li class="elementoMenu"><a href="{{ nav['referencia'] }}">{{ nav["contenido"] }}</a></li>
                     {% endfor %}
                 </ul>
             </nav>
         </header>
-
         <section id="principal">
-
             <aside class="borde" id="navegacionLateral">
-            <ul id="listaLateral">
+            <ul id="listaLateral" class="flex-container flex-direction-column">
                 {% for elemento in navegacionLateral %}
-                    <li class="elementoMenu"><a href="{{ elemento["referencia"] }}">{{ elemento["contenido"] }}</a></li>
+                    <li class="elementoMenu"><a href="{{ elemento['referencia'] }}">{{ elemento["contenido"] }}</a></li>
                 {% endfor %}
             </ul>
         </aside>
             {% block main %}{% endblock %}            
         </section>
-
         <footer class="borde">
             <div id="pie">&copy; 2019 SIBW</div>
         </footer>
