Modificada la estructura de ficheros para respetar mejor el modelo MVC

--- a/templates/html/buscar.html
+++ b/templates/html/buscar.html
@@ -1,6 +1,6 @@
-{% extends "templates/base.html" %}
+{% extends "templates/html/base.html" %}
 {% block css %}
-        <link rel="stylesheet" href="css/buscar.css"/>
+        <link rel="stylesheet" href="templates/css/buscar.css"/>
 {% endblock %}
 {% block main %}
 	<main class="borde">
