--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <title>Viajes</title>
-        <link rel="stylesheet" href="css/comun.css"/>
+        <link rel="stylesheet" href="templates/css/comun.css"/>
         {% block css %}{% endblock %}
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
         <header class="borde" id="cabecera">
-            <a href="/SIBW"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
+            <a href="/SIBW"><img id="imagenAvion" src="templates/img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
             <h1 id="cabeceraPrincipal">Viajes</h1>
             <nav>
                 <ul id="menuCabecera">
