--- a/templates/html/evento_imprimir.html
+++ b/templates/html/evento_imprimir.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>Viajes</title>
-        <link rel="stylesheet" href="css/evento_imprimir.css"/>
+        <link rel="stylesheet" href="templates/css/evento_imprimir.css"/>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
     </head>
     <body>
     	<header class="borde">
-            <a href="principal.html"><img id="imagenAvion" src="img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
+            <a href="principal.html"><img id="imagenAvion" src="templates/img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
     	</header>
     	<section>
     		<main class="borde" id="descripcion">
