--- a/templates/html/principal.html
+++ b/templates/html/principal.html
@@ -1,6 +1,6 @@
-{% extends "templates/base.html" %}
+{% extends "templates/html/base.html" %}
 {% block css %}
-        <link rel="stylesheet" href="css/principal.css"/>
+        <link rel="stylesheet" href="templates/css/principal.css"/>
 {% endblock %}
 {% block main %}
             <main class="borde" id="conjuntoEventos">
