Solucionado el bug de evento imprimir

--- a/templates/html/evento.html
+++ b/templates/html/evento.html
@@ -41,7 +41,7 @@
                 <article id="redesSocialesEvento">
                     <a  href="#" onclick="ventanaEmergente('Facebook')"><img class="logosRedesSocialesEvento" src="templates/img/fb-logo.jpg"></a>
                     <a  href="#" onclick="ventanaEmergente('Twitter')"><img class="logosRedesSocialesEvento" src="templates/img/tw-logo.jpg"></a>
-                    <a  href="evento_imprimir.php"><img class="logosRedesSocialesEvento" src="templates/img/imprimir-logo.jpg"></a>
+                    <a  href="evento_imprimir.php?idViaje={{ viaje['id'] }}"><img class="logosRedesSocialesEvento" src="templates/img/imprimir-logo.jpg"></a>
                 </article>
             </main>
 
