--- a/templates/html/evento_imprimir.html
+++ b/templates/html/evento_imprimir.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     	<header class="borde">
-            <a href="principal.html"><img id="imagenAvion" src="templates/img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
+            <a href="/SIBW"><img id="imagenAvion" src="templates/img/avion.jpg" alt="Logotipo de la agencia de viajes"/></a>
     	</header>
     	<section>
     		<main class="borde" id="descripcion">
