--- a/templates/css/comun.css
+++ b/templates/css/comun.css
@@ -87,3 +87,81 @@
 #listaLateral {
     list-style-type: none;
 }
+
+
+/* loging */
+#login input[type=text], input[type=password] {
+  width: 100%;
+  /*padding: 0.2em 1em;
+  margin: 0.5em 0;*/
+  margin-bottom: 0.5em;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+#login button {
+  background-color: #4CAF50;
+  color: white;
+  /*padding: 0.5em 1em;
+  margin: 0.5em 0;*/
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+
+#login button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+#login .container {
+  padding: 1em;
+}
+
+#login span.pass {
+  float: right;
+  padding-top: 1em;
+}
+
+#login label {
+  font-weight: bold;
+}
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  #login span.pass {
+     display: block;
+     float: none;
+  }
+  #login .cancelbtn {
+     width: 100%;
+  }
+}
+
+/* Loged */
+#loged-nombre-usuario > p{
+    font-weight: bold;
+}
+
+#loged-tipo-usuario > p{
+    color: blue; 
+}
+
+#loged-botones {
+    margin-top: 1em; 
+}
