--- a/templates/html/base.html
+++ b/templates/html/base.html
@@ -28,41 +28,46 @@
                     {% endfor %}
                 </ul>
             </nav>
-            <section id="login">
-              <form action="/login.php" method="POST">
-                <div class="flex-container flex-direction-column">
-                  <label for="user">Usuario</label>
-                  <input type="text" placeholder="Introduce tu Usuario" name="user" required>
+            <div id="datosSesion">
+            	{% if not usuario %}
+				    <section id="login">
+				      <form action="./autenticarUsuario.php" method="POST">
+				        <div class="flex-container flex-direction-column">
+				          <label for="user">Usuario</label>
+				          <input type="text" name="user" placeholder="Introduce tu Usuario" name="user" required>
 
-                  <label for="pass">Contraseña</label>
-                  <input type="password" placeholder="Introduce tu Contraseña" name="pass" required>
-                      
-                  <button type="submit">Login</button>
-                </div>
-                <!--
-                <div class="container" style="background-color:#f1f1f1">
-                  <button type="button" class="cancelbtn">Cancel</button>
-                  <span class="psw">Forgot <a href="#">password?</a></span>
-                </div>
-              -->
-              </form>
-            </section>
-            <section id="loged">
-              <section id="loged-nombre-usuario">
-                <p>Pedro Luis</p>
-              </section>
-              <section id="loged-tipo-usuario">
-                <p>Administrador</p>
-              </section>
-              <section id="loged-botones" class="flex-container justify-content-space-around">
-                <section id="loged-botones-editar">
-                  <button>Editar</button>
-                </section>
-                <section id="loged-botones-logout">
-                  <button>Logout</button>
-                </section>
-              </section>
-            </section>
+				          <label for="pass">Contraseña</label>
+				          <input type="password" name="passwd" placeholder="Introduce tu Contraseña" name="pass" required>
+				              
+				          <button type="submit">Login</button>
+				        </div>
+				        <!--
+				        <div class="container" style="background-color:#f1f1f1">
+				          <button type="button" class="cancelbtn">Cancel</button>
+				          <span class="psw">Forgot <a href="#">password?</a></span>
+				        </div>
+				      -->
+				      </form>
+				    </section>
+		        {% else %}
+				    <section id="loged">
+				      <section id="loged-nombre-usuario">
+				        <p>{{ usuario['user'] }}</p>
+				      </section>
+				      <section id="loged-tipo-usuario">
+				        <p>Administrador</p>
+				      </section>
+				      <section id="loged-botones" class="flex-container justify-content-space-around">
+				        <section id="loged-botones-editar">
+				          <button onclick="window.open('/editarUsuario.php');">Editar</button>
+				        </section>
+				        <section id="loged-botones-logout">
+				          <button onclick="window.open('/cerrarSesion.php');">Logout</button>
+				        </section>
+				      </section>
+			        </section>
+	            {% endif %}
+            </div>
         </aside>
             {% block main %}{% endblock %}            
         </section>
