terminadala la practica 4

--- a/templates/html/addEvento.html
+++ b/templates/html/addEvento.html
@@ -4,9 +4,9 @@
 {% endblock %}
 {% block main %}
 	<main class="borde">
-		<form action="./addEvento.php" method="post">
+		<form style="margin: 5%;" action="./addEvento.php" method="post">
 			Ciudad <input type="text" name="ciudad"/>
-			Fecha <input type="date" name="fecha"/>
+			Fecha <input type="date" name="fecha"/></br>
 			Texto <input type="text" name="texto"/>
 			Palabras Claves <input type="text" name="palabrasClaves"/>
 			Rutas de las imagenes <input type="text" name="imagenes"/>
