--- a/templates/html/addFotografiaEvento.html
+++ b/templates/html/addFotografiaEvento.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block main %}
 	<main class="borde">
-		<form method="post" action="./addFotografiaEvento.php">
+		<form style="margin: 5%;" method="post" action="./addFotografiaEvento.php">
 			Introduzca la ruta de la imagen a añadir<input type="text" name="fotografiaEvento">
 			Introduzca el id del viaje<input type="text" name="id">
 			<input type="submit" value="Enviar">
