--- a/templates/html/eliminarPalabraClave.html
+++ b/templates/html/eliminarPalabraClave.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block main %}
 	<main class="borde">
-		<form method="post" action="./eliminarPalabraClave.php">
+		<form style="margin: 5%;" method="post" action="./eliminarPalabraClave.php">
 			Introduzca la etiqueta a eliminar<input type="text" name="palabraClave">
 			Introduzca el id del viaje<input type="text" name="id">
 			<input type="submit" value="Enviar">
