--- a/templates/html/formularioBuscarComentario.html
+++ b/templates/html/formularioBuscarComentario.html
@@ -3,8 +3,10 @@
     <link rel="stylesheet" href="templates/css/evento.css"/>
 {% endblock %}
 {% block main %}
-	<form action="./buscarComentario.php">
-		Id comentario<input type="text" name="idComentario">
-		<input type="submit" value="Buscar">
-	</form>
+	<main class="borde">
+		<form style="margin: 5%;" action="./buscarComentario.php">
+			Id comentario<input type="text" name="idComentario">
+			<input type="submit" value="Buscar">
+		</form>
+	</main>
 {% endblock %}
