--- a/templates/html/principal.html
+++ b/templates/html/principal.html
@@ -5,17 +5,16 @@
 {% block main %}
             <main class="borde" id="conjuntoEventos">
             {% for event in eventos %}
-            <div>
-            	<a href="{{ event['href'] }}">
-            		<img class="imagenes" src={{ event['imagenFuente'] }} alt="Viaje hacia {{ event['ciudad'] }}"/>
-            		<p class="ciudad">{{ event.ciudad }}</p>
-            		
-            		{% if usuario and usuario.tipoUsuario == 'gestor' %}
-            			<button onclick="window.open('http://localhost:8080/editarEvento.php?id={{ event.id }}')" type="button">Editar</button>
-            			<button onclick="window.open('http://localhost:8080/eliminarEvento.php?id={{ event.id }}')" type="button">Eliminar</button>
-            		{% endif %}
-            	</a>
-            </div>
+		        <div id="evento">
+		        	<a href="{{ event['href'] }}">
+		        		<img class="imagenes" src={{ event['imagenFuente'] }} alt="Viaje hacia {{ event['ciudad'] }}"/>
+		        		<p class="ciudad">{{ event.ciudad }}</p>
+		        	</a>
+		        	{% if usuario and usuario.tipoUsuario == 'gestor' %}
+		    			<button onclick="window.open('http://localhost:8080/editarEvento.php?id={{ event.id }}')" type="button">Editar</button>
+		    			<button onclick="window.open('http://localhost:8080/eliminarEvento.php?id={{ event.id }}')" type="button">Eliminar</button>
+		    		{% endif %}
+		        </div>
             {% endfor %}
             </main>
 {% endblock %}
