--- a/templates/html/resultadoBusquedaComentario.html
+++ b/templates/html/resultadoBusquedaComentario.html
@@ -3,7 +3,11 @@
     <link rel="stylesheet" href="templates/css/evento.css"/>
 {% endblock %}
 {% block main %}
-	<p>Nombre autor: {{ nombreAutor }}</p>
-	<p>Texto: {{ texto }}</p>
-	<p>Fecha: {{ fecha }}</p>
+	<main class="borde">
+		<div style="margin: 5%;">
+			<p>Nombre autor: {{ nombreAutor }}</p>
+			<p>Texto: {{ texto }}</p>
+			<p>Fecha: {{ fecha }}</p>
+		</div>
+	</main>
 {% endblock %}
