--- a/templates/html/resultadoBusquedaEvento.html
+++ b/templates/html/resultadoBusquedaEvento.html
@@ -3,7 +3,11 @@
     <link rel="stylesheet" href="templates/css/evento.css"/>
 {% endblock %}
 {% block main %}
-	<p>Ciudad: {{ ciudad }}</p>
-	<p>Texto: {{ texto }}</p>
-	<p>Fecha publicación: {{ fechaPublicacion }}</p>
+	<main class="borde">
+		<div style="margin: 5%;">
+			<p>Ciudad: {{ ciudad }}</p>
+			<p>Texto: {{ texto }}</p>
+			<p>Fecha publicación: {{ fechaPublicacion }}</p>
+		</div>
+	</main>
 {% endblock %}
