--- a/templates/html/formularioBuscarEvento.html
+++ b/templates/html/formularioBuscarEvento.html
@@ -3,8 +3,10 @@
     <link rel="stylesheet" href="templates/css/evento.css"/>
 {% endblock %}
 {% block main %}
-	<form action="./buscarEvento.php">
-		Id viaje<input type="text" name="idViaje">
-		<input type="submit" value="Buscar">
-	</form>
+	<main class="borde">
+		<form style="margin: 5%;" action="./buscarEvento.php">
+			Id viaje<input type="text" name="idViaje">
+			<input type="submit" value="Buscar">
+		</form>
+	</main>
 {% endblock %}
