--- a/templates/html/operacionesUsuario.html
+++ b/templates/html/operacionesUsuario.html
@@ -1,11 +1,13 @@
 {% extends "templates/html/base.html" %}
 {% block css %}
-        <link rel="stylesheet" href="templates/css/evento.css"/>
+        <link rel="stylesheet" href="templates/css/principal.css"/>
 {% endblock %}
 {% block main %}
-	<ul>
-		{% for operacionDisponible in operacionesDisponibles %}
-			<li>{{ operacionDisponible }}</li>
-		{% endfor %}
-	</ul>
+	<main class="borde">
+		<ul>
+			{% for operacionDisponible in operacionesDisponibles %}
+				<li>{{ operacionDisponible }}</li>
+			{% endfor %}
+		</ul>
+	</main>
 {% endblock %}
